Content alignment fixes
Fixing the left and right padding for all pages' content, to prevent content crashing the edge of the screen on mobile devices.
Fixing case on mobile devices where the hamburger menu is pushed to a new line.

--- a/src/assets/stylesheets/pages/_rivers.scss
+++ b/src/assets/stylesheets/pages/_rivers.scss
@@ -21,8 +21,4 @@
     background-color: $swisscanoe-blue;
     color: white;
   }
-
-  .lakes-list {
-    padding: 0 1em;
-  }
 }  
